新增遺漏值處理筆記

--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -57,7 +57,9 @@
     "\n",
     "# 型別 : 是 Python 的一種型別，就是 None 型別\n",
     "\n",
-    "# 判斷 : 可以直接用 is None 來偵測\n",
+    "# 判斷 : 可以直接用 is None 來偵測 , None 在 Pandas 也算是 NaN , 也可以用 isna() 偵測\n",
+    "\n",
+    "# 雖然 None 可以用 isna() 偵測 , 但是數值和字串欄位可能都有 None , 都要各自做 None 的偵測\n",
     "\n"
    ]
   },
@@ -96,7 +98,14 @@
       "3  20250804  NaN  150.0\n",
       "4       NaN  aaa  160.0\n",
       "         日期   名稱    收盤價\n",
-      "0  20250801  aaa  120.0\n"
+      "0  20250801  aaa  120.0\n",
+      "         日期   名稱    收盤價\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "4      None  aaa  160.0\n",
+      "         日期   名稱    收盤價\n",
+      "4      None  aaa  160.0\n",
+      "3  20250804       150.0\n"
      ]
     }
    ],
@@ -198,7 +207,45 @@
     "\n",
     "# 4. 找出 NaN \n",
     "\n",
+    "# 只能用布林陣列的方法 , 簡單來說就是用 isin([ ... , ... ]) 還有 isna() 本身為 True 來找出異常列，\n",
     "\n",
+    "# 只是因為遺漏值有分字串和數值，而找空白的 strip() 不能用在數值欄位，因此要分字串和數值欄位處理\n",
+    "\n",
+    "# 不然其實 isna() 就已經可以把 NaN 資料列篩選出來，pandas 的 isna() 是可以用在字串欄位的，不像 numpy 的 isnan() 不能\n",
+    "\n",
+    "dataframe_2 = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "# isna() 可以直接對 dataframe 使用，產生布林陣列\n",
+    "\n",
+    "# 然後用 any(axis=1) 選出只要任一欄有 NaN 的資料列就為 True，axis = 1 就是往欄方向看\n",
+    "\n",
+    "# isna().all(axis=1) 則是選出全部欄位都是 NaN 的為 True\n",
+    "\n",
+    "# notna().all(axis=1) 則是選出全部欄位都要是沒有 NaN 的資列列為 True\n",
+    "\n",
+    "NaN_rows = dataframe_2[dataframe_2.isna().any(axis=1)]\n",
+    "\n",
+    "print(NaN_rows)\n",
+    "\n",
+    "# 字串欄也是一樣的方法\n",
+    "\n",
+    "Empty_rows = dataframe_2.select_dtypes(include=\"object\")\n",
+    "\n",
+    "# 因為是慢慢累加 True 的資料列，所以要用 a = a + b\n",
+    "\n",
+    "Empty_columns = Empty_rows.columns\n",
+    "\n",
+    "Empty_rows = pandas.DataFrame()\n",
+    "\n",
+    "for col in Empty_columns : \n",
+    "\n",
+    "    Empty_rows = pandas.concat([Empty_rows,dataframe_2[dataframe_2[col].str.strip().isin([None,\"\"])]])\n",
+    "\n",
+    "print(Empty_rows)\n",
+    "\n",
+    "# 最後會發現有重複的列 , 因為當初做 None 的篩選的時候 , 數值和字串有一起做 , 才接下來做字串的\n",
+    "\n",
+    "# 沒有把數值和字串列分開 , 所以會有重複 , 可以分開做 , 就不會有重複的列\n",
     "\n",
     "\n"
    ]
