新增遺漏值及基本變數練習筆記

--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -1216,6 +1216,41 @@
     "print(numeric_array)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a28fc876",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 有時候 布林值的 \" 非 \" 是用 not 而不是波浪號 ~\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "# 這邊可以用 ~ \n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "dataframe_string = dataframe.select_dtypes(include=\"object\")\n",
+    "\n",
+    "select_string = dataframe_string.columns\n",
+    "\n",
+    "for col in select_string : \n",
+    "\n",
+    "    dataframe = dataframe[~dataframe[col].str.strip().isin([\"\",None])]\n",
+    "\n",
+    "# 這邊就要用 not , 改成 ~ 會提示要改掉\n",
+    "\n",
+    "NaN_list = [1,\"\",\" \",float(\"NaN\"),None]\n",
+    "\n",
+    "NaN_list = [x for x in NaN_list if not (isinstance(x,str) and x.strip() == \"\")]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
