--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -159,19 +159,31 @@
     "    \n",
     "    # 後面判斷是 str 才做 strip(x) 並傳出，不是就維持原來 x 傳出\n",
     "\n",
+    "    # dataframe = dataframe.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
+    "\n",
     "    # isinstance() 就是 in [...] 的函數版本，不過特別是看是不是哪個型別，例如 str , float ...\n",
     "\n",
     "    # 如果 isin / isinstance = is [...] 或 == [...] , 那 isna / isnan 就是 is nan 或 == nan \n",
     "\n",
     "    # isna / isnan / isin / isinstance 都是回傳布林值的函數\n",
     "\n",
-    "    # dataframe = dataframe.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
-    "\n",
     "# 第三種寫法 : 用 apply() 直接逐行處理，效能比較好\n",
     "\n",
     "    # 不過就不用 for 迴圈，直接給 iterable 就可以，lambda 基本上就是迴圈，map() 那些也都是\n",
     "\n",
     "    # list comprehension = for 迴圈 = lambda = map() , apply() , frompyfunc() \n",
+    "\n",
+    "    # lambda 本質上應該是迴圈內增加篩選條件用 , 是指迴圈內的元素 , 而不是他在產生迴圈 , \n",
+    "    \n",
+    "    # 實際上還是要靠 map() , filterfalse() 這類函數本身有元素逐項讀取的迴圈功能才能迴圈 , \n",
+    "    \n",
+    "    # 只是因為迴圈函數常常配合 lambda 來代表元素和(前)處理元素 , 所以才會在迴圈函數常看到 lambda\n",
+    "\n",
+    "    # lambda 通常是用在一個函數不夠用 , 需要兩個以上 ... and ... 邏輯運算或 ... if ... 的情況，\n",
+    "\n",
+    "    # 下面一個函數情況的 apply(lambda col : col.str.strip()) 就可以省略為 apply(str.strip)\n",
+    "\n",
+    "    # 或者像 filterfalse(lambda x : math.isnan(x) , a) 可以省略為 filterfalse(math.isnan , a)\n",
     "\n",
     "    # select_columns = select_dataframe.columns\n",
     "\n",
@@ -436,13 +448,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0453e4af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1]\n",
+      "[1]\n",
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy\n",
+    "import pandas\n",
     "import math\n",
-    "import itertools\n",
+    "from itertools import filterfalse\n",
     "\n",
     "\n",
     "\n",
@@ -450,9 +475,100 @@
     "\n",
     "# List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
     "\n",
+    "# 三個分辨方式\n",
+    "\n",
+    "# a. \"\" , \" \" : 字串 , 所以要 isinstance(x,str) and strip(x) == True 才做\n",
+    "\n",
+    "# b. Nan : 數值 , 所以要 isinstance(x,float) and math.isnan(x) == True 才做\n",
+    "\n",
+    "# c. None : None 類別 , 所以要 is None 才做\n",
     "\n",
     "\n",
-    "\n"
+    "# 一維的 list 用 list comprehension 就可以了\n",
+    "\n",
+    "# 一維的 numpy 陣列可以用 for 迴圈一個一個讀取元素 , 但是因為不能混和放字串或數字 , 否則全部轉文字 , 因此只有舉屬值的例子\n",
+    "\n",
+    "# 寫法一 : 最基本寫法 , 多次的 list comprehension , 也可以用 for 迴圈代替\n",
+    "\n",
+    "NaN_list = [1,\"\",\" \",float(\"NaN\"),None]\n",
+    "\n",
+    "NaN_list = [x for x in NaN_list if not (isinstance(x,str) and x.strip() == \"\")]\n",
+    "\n",
+    "NaN_list = [x for x in NaN_list if not (isinstance(x,float) and math.isnan(x))]\n",
+    "\n",
+    "NaN_list = [x for x in NaN_list if not (x == None)]\n",
+    "\n",
+    "print(NaN_list)\n",
+    "\n",
+    "NaN_list_2 = [1,\"\",\" \",float(\"NaN\"),None]\n",
+    "\n",
+    "New_NaN_list = []\n",
+    "\n",
+    "for x in NaN_list : \n",
+    "\n",
+    "    if isinstance(x,str) and x.strip() == \"\" : \n",
+    "\n",
+    "        continue\n",
+    "\n",
+    "    if isinstance(x,float) and math.isnan(x) : \n",
+    "\n",
+    "        continue\n",
+    "\n",
+    "    if x == None : \n",
+    "\n",
+    "        continue\n",
+    "\n",
+    "    New_NaN_list.append(x)\n",
+    "\n",
+    "print(New_NaN_list)\n",
+    "\n",
+    "# 寫法二 : 用多次 filterfalse 代替 list comprehension , 最後要記得轉 list 才能看到結果\n",
+    "\n",
+    "NaN_list_3 = [1,\"\",\" \",float(\"NaN\"),None]\n",
+    "\n",
+    "NaN_list_3 = filterfalse(lambda x : isinstance(x,str) and x.strip()==\"\",NaN_list_3)\n",
+    "\n",
+    "NaN_list_3 = filterfalse(lambda x : isinstance(x,float) and math.isnan(x),NaN_list_3)\n",
+    "\n",
+    "NaN_list_3 = filterfalse(lambda x : x == None,NaN_list_3)\n",
+    "\n",
+    "NaN_list_4 = list(NaN_list_3)\n",
+    "\n",
+    "print(NaN_list_4)\n",
+    "\n",
+    "\n",
+    "# 寫法三 : 直接用 any() 把所有條件合併\n",
+    "\n",
+    "NaN_list_5 = [1,\"\",\" \",float(\"NaN\"),None]\n",
+    "\n",
+    "NaN_list_5 = [x for x in NaN_list_4 if not any([(isinstance(x,str) and x.strip() == \"\"),(isinstance(x,float) and math.isnan(x)),(x == None)])]\n",
+    "\n",
+    "print(NaN_list_5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# array = numpy.array([1,float(\"NaN\"),3])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 下面做適用二維陣列的寫法 : 利用 pandas dataframe 和 numpy array 基本上就是 list , 第一個元素就是一列的 list 方式來加上多次 list comprehension 來做\n",
+    "\n",
+    "\n",
+    "# dataframe \n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "# for i in dataframe.shape[0] : \n",
+    "\n",
+    "#     dataframe[i] = [x for x in dataframe[i] if ]\n"
    ]
   }
  ],
