新增遺漏值處理筆記

--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -300,10 +300,15 @@
       "3  20250804       150.0\n",
       "1  20250802  aaa    NaN\n",
       "2  20250803  aaa    NaN\n",
+      "[1. 3.]\n",
+      "[1. 3. 4. 5. 8. 9.]\n",
       "[['a' '2' '3']\n",
       " ['b' '5' '6']\n",
       " ['c' '8' '9']]\n",
       "<U21\n",
+      "int64\n",
+      "float64\n",
+      "[]\n",
       "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
       "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
       "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n"
@@ -408,39 +413,61 @@
     "\n",
     "# b-1. numpy 基本上是處理數值為主的模組 , 因此提供的去除遺漏值方法只有數值的 isnan()\n",
     "\n",
-    "# b-2. numpy 也沒辦法處理有空字串的情況，如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
+    "array = numpy.array([1,float(\"NaN\"),3])\n",
     "\n",
-    "array = numpy.array([[1,numpy.nan,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
+    "array_2 = numpy.array([[1,numpy.nan,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
+    "\n",
+    "array_3 = array[~numpy.isnan(array)]\n",
+    "\n",
+    "# 注意二維做下去就變成只有列出符合條件的元素的一維結果，不是很好用\n",
+    "\n",
+    "array_4 = array_2[~numpy.isnan(array_2)]\n",
+    "\n",
+    "print(array_3)\n",
+    "\n",
+    "print(array_4)\n",
+    "\n",
+    "# b-2. numpy 也沒辦法處理有空字串的情況，如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
     "\n",
     "# b-3. 但因為 numpy 本質是 list , 也是可以放數值以外的變數當作元素\n",
     "\n",
-    "array_2 = numpy.array([[\"a\",2,3],[\"b\",5,6],[\"c\",8,9]])\n",
+    "array_5 = numpy.array([[\"a\",2,3],[\"b\",5,6],[\"c\",8,9]])\n",
     "\n",
-    "print(array_2)\n",
+    "print(array_5)\n",
     "\n",
-    "# 但是只要是混和型 array , 全部元素都會自動轉型成 u21 或 u32 的混和型文字型別 , 用 dtype 屬性可以檢視\n",
+    "# 但是只要是混和型 array , 全部元素都會自動轉型成 u21 或 u32 的混和型文字或數值型別 , 用 dtype 屬性可以檢視\n",
     "\n",
     "# 或者是上面 array_2 檢視結果就可以發現都是字串\n",
     "\n",
-    "print(array_2[0:1].dtype)\n",
+    "print(array_5[0:1].dtype)\n",
+    "\n",
+    "# 數值混和型 array 也會被轉成統一數值型別 , 像這邊 int 都被轉成 float\n",
+    "\n",
+    "array_6 = numpy.array([1,2,3])\n",
+    "\n",
+    "array_7 = numpy.array([1,float(\"NaN\"),3])\n",
+    "\n",
+    "print(array_6.dtype)\n",
+    "\n",
+    "print(array_7.dtype)\n",
     "\n",
     "# 因此即便 numpy 有 dtype , 還是不能代替沒有 select_dtypes() 的問題，因為都轉型成混和字串類別\n",
     "\n",
-    "# 可以看下面例子，執行後就會發現因為都是字串，numeric_array 會是空的，value 可以發現都是錯\n",
+    "# 可以看下面例子，執行後就會發現因為元素都轉成字串，numeric_array 會是空的，\n",
     "\n",
-    "# 目前只能用一個一個元素去檢驗的方式來判斷 , 用 isinstance() + all()\n",
+    "# 因為用 isinstance() + all() 一個一個元素去檢驗的方式來判斷都不是數值，value 可以發現都是字串\n",
     "\n",
-    "# numeric_array = [index for index in range(array_2.shape[1]) if all([isinstance(item,(int,float)) for item in array_2[:,index]])]\n",
+    "numeric_array = [index for index in range(array_5.shape[1]) if all([isinstance(item,(int,float)) for item in array_5[:,index]])]\n",
     "\n",
-    "# print(numeric_array)\n",
+    "print(numeric_array)\n",
     "\n",
-    "# for index in range(array_2.shape[1]) : \n",
+    "for index in range(array_5.shape[1]) : \n",
     "\n",
-    "#     value = [type(item) for item in array_2[:,index]]\n",
+    "    value = [type(item) for item in array_5[:,index]]\n",
     "\n",
-    "#     print(value)\n",
+    "    print(value)\n",
     "\n",
-    "# 結論 : 還是用 pandas 來做遺漏值排除會比較好，或者用下面的 list comprehension 一個一個元素看\n",
+    "# 結論 : 基於上面種種因素，還是用 pandas 來做遺漏值排除會比較好，或者用下面的 list comprehension 一個一個元素看\n",
     "\n",
     "#        numpy 基本上還是數值型的陣列，主要是做為高效率運算用\n",
     "\n"
@@ -448,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0453e4af",
    "metadata": {},
    "outputs": [
@@ -461,6 +488,17 @@
       "[1]\n",
       "[1]\n"
      ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 1 dimension(s) and the array at index 1 has 0 dimension(s)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[71], line 102\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m array : \n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39misnan(x) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m : \n\u001b[1;32m--> 102\u001b[0m         array_2 \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mconcatenate((array_2,x))\n\u001b[0;32m    104\u001b[0m \u001b[38;5;28mprint\u001b[39m(array_2)\n\u001b[0;32m    107\u001b[0m \u001b[38;5;66;03m# b-2. 一維的 pandas : \u001b[39;00m\n\u001b[0;32m    108\u001b[0m \n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# pandas 基本上都是二維 , 所以看下面例子\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    117\u001b[0m \n\u001b[0;32m    118\u001b[0m \u001b[38;5;66;03m# dataframe \u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 1 dimension(s) and the array at index 1 has 0 dimension(s)"
+     ]
     }
    ],
    "source": [
@@ -471,7 +509,7 @@
     "\n",
     "\n",
     "\n",
-    "# 5. 其他方式 2 : python 原生方式\n",
+    "# 5. 其他方式 2 : python 原生方式 / 一個一個元素讀取方式\n",
     "\n",
     "# List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
     "\n",
@@ -484,9 +522,11 @@
     "# c. None : None 類別 , 所以要 is None 才做\n",
     "\n",
     "\n",
-    "# 一維的 list 用 list comprehension 就可以了\n",
+    "# 5.1 一維 : \n",
     "\n",
-    "# 一維的 numpy 陣列可以用 for 迴圈一個一個讀取元素 , 但是因為不能混和放字串或數字 , 否則全部轉文字 , 因此只有舉屬值的例子\n",
+    "# a. python 原生方式\n",
+    " \n",
+    "# 一維 list 用 list comprehension 就可以了\n",
     "\n",
     "# 寫法一 : 最基本寫法 , 多次的 list comprehension , 也可以用 for 迴圈代替\n",
     "\n",
@@ -536,7 +576,6 @@
     "\n",
     "print(NaN_list_4)\n",
     "\n",
-    "\n",
     "# 寫法三 : 直接用 any() 把所有條件合併\n",
     "\n",
     "NaN_list_5 = [1,\"\",\" \",float(\"NaN\"),None]\n",
@@ -546,16 +585,38 @@
     "print(NaN_list_5)\n",
     "\n",
     "\n",
+    "# b. numpy 和 pandas 一個一個元素讀取方式\n",
     "\n",
-    "# array = numpy.array([1,float(\"NaN\"),3])\n",
+    "# b-1. 一維的 numpy : \n",
+    "\n",
+    "# 一維的 numpy 陣列可以用 for 迴圈一個一個讀取元素 , 但是因為不能混和放字串或數字 , 否則全部轉文字 , 因此只有舉屬值的例子\n",
+    "\n",
+    "array = numpy.array([1,numpy.nan,3])\n",
+    "\n",
+    "array_2 = numpy.array([])\n",
+    "\n",
+    "# numpy 的 append 是 a = a + b 的概念\n",
+    "\n",
+    "# 這邊不能用 concatenate，因為 concatenate 一定要 array 對 array , 這邊 x 是單純整數\n",
+    "\n",
+    "for x in array : \n",
+    "    \n",
+    "    if numpy.isnan(x) == False : \n",
+    "\n",
+    "        array_2 = numpy.append(array_2,x)\n",
+    "\n",
+    "print(array_2)\n",
+    "\n",
+    "\n",
+    "# b-2. 一維的 pandas : \n",
+    "\n",
+    "# pandas 基本上都是二維 , 所以看下面例子\n",
     "\n",
     "\n",
     "\n",
+    "# 5-2. 下面做適用二維陣列的寫法 : \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 下面做適用二維陣列的寫法 : 利用 pandas dataframe 和 numpy array 基本上就是 list , 第一個元素就是一列的 list 方式來加上多次 list comprehension 來做\n",
+    "# 利用 pandas dataframe 和 numpy array 基本上就是 list , 第一個元素就是一列的 list 方式來加上多次 list comprehension 來做\n",
     "\n",
     "\n",
     "# dataframe \n",
