新增遺漏值處理及 pandas 模組筆記

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -653,9 +653,242 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30d3edc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "日期\n",
+      "名稱\n",
+      "收盤價\n",
+      "[1 2 3]\n",
+      "[4 5 6]\n",
+      "[7 8 9]\n",
+      "0 20250801 aaa 120.0\n",
+      "1 20250802 aaa nan\n",
+      "2 20250803 aaa nan\n",
+      "3 20250804     150.0\n",
+      "4 None aaa 160.0\n",
+      "Pandas(Index=0, 日期='20250801', 名稱='aaa', 收盤價=120.0)\n",
+      "Pandas(Index=1, 日期='20250802', 名稱='aaa', 收盤價=nan)\n",
+      "Pandas(Index=2, 日期='20250803', 名稱='aaa', 收盤價=nan)\n",
+      "Pandas(Index=3, 日期='20250804', 名稱='   ', 收盤價=150.0)\n",
+      "Pandas(Index=4, 日期=None, 名稱='aaa', 收盤價=160.0)\n",
+      "0 20250801 aaa 120.0\n",
+      "1 20250802 aaa nan\n",
+      "2 20250803 aaa nan\n",
+      "3 20250804     150.0\n",
+      "4 None aaa 160.0\n",
+      "0 20250801 aaa 120.0\n",
+      "1 20250802 aaa nan\n",
+      "2 20250803 aaa nan\n",
+      "3 20250804     150.0\n",
+      "4 None aaa 160.0\n",
+      "0 20250801 aaa 120.0\n",
+      "1 20250802 aaa nan\n",
+      "2 20250803 aaa nan\n",
+      "3 20250804     150.0\n",
+      "4 None aaa 160.0\n",
+      "5\n",
+      "3\n",
+      "0    120.0\n",
+      "1      NaN\n",
+      "2      NaN\n",
+      "3    150.0\n",
+      "4    160.0\n",
+      "Name: 收盤價, dtype: float64\n",
+      "[3 6 9]\n",
+      "0    120.0\n",
+      "1      NaN\n",
+      "2      NaN\n",
+      "3    150.0\n",
+      "4    160.0\n",
+      "Name: 收盤價, dtype: float64\n",
+      "日期     20250801\n",
+      "名稱          aaa\n",
+      "收盤價       120.0\n",
+      "Name: 0, dtype: object\n",
+      "     收盤價\n",
+      "0  120.0\n",
+      "1    NaN\n",
+      "2    NaN\n",
+      "3  150.0\n",
+      "4  160.0\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "1  20250802  aaa    NaN\n",
+      "2  20250803  aaa    NaN\n",
+      "3  20250804       150.0\n",
+      "4      None  aaa  160.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dataframe 基本觀念補充\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "import numpy\n",
+    "\n",
+    "\n",
+    "# 1. dataframe 不能直接當 list 做 for 迴圈的 iterable 的讀取，會產生錯誤結果\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "for row in dataframe : \n",
+    "\n",
+    "    print(row)\n",
+    "\n",
+    "# numpy array 是可以的，因為是用 list 當基礎\n",
+    "\n",
+    "array = numpy.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "\n",
+    "for row in array : \n",
+    "\n",
+    "    print(row)\n",
+    "\n",
+    "# pandas dataframe 還是得要靠切片或 loc / iloc 來讀取每列資料 , 但基本上會比較推薦直接用 dataframe[\"...\"] 的欄位向量化操作，會比較快\n",
+    "\n",
+    "\n",
+    "# 兩種函數方式取每列資料 : \n",
+    "\n",
+    "# 可以用 range(len(df)) 或 df.index 來當迴圈變數\n",
+    "\n",
+    "\n",
+    "# a. iterrows() : \n",
+    "\n",
+    "# 最常見 , 但效能比較不好\n",
+    "\n",
+    "# 如果直接全部欄位放下去，像是 row[[\"日期\",\"名稱\",\"收盤價\"]]，讀取會變成詳細資料格式，比較不好用，要分開\n",
+    "\n",
+    "for index , row in dataframe.iterrows() : \n",
+    "\n",
+    "    print(index , row[\"日期\"] , row[\"名稱\"] , row[\"收盤價\"])\n",
+    "\n",
+    "\n",
+    "# b. itertuples() : \n",
+    "\n",
+    "# 速度比較快\n",
+    "\n",
+    "# 回傳 : namedtuple ( 就是有 name 的 tuple , 基本上還是一樣用法 , 用 [\"索引值\"] 來取得值 , 但多了用屬性取得值 )\n",
+    "\n",
+    "for row in dataframe.itertuples() : \n",
+    "\n",
+    "    print(row)\n",
+    "\n",
+    "for row in dataframe.itertuples() : \n",
+    "\n",
+    "    print(row[0] , row[1] , row[2] , row[3])\n",
+    "\n",
+    "# 如果用屬性來得到值 , 記得不要用 index 屬性 , 會是 namedtuple 的原生屬性 , 變成其他物件\n",
+    "\n",
+    "for row in dataframe.itertuples() : \n",
+    "\n",
+    "    print(row[0] , row.日期 , row.名稱 , row.收盤價)\n",
+    "\n",
+    "# 回傳 : 一般 tuple\n",
+    "\n",
+    "for row in dataframe.itertuples(name=None) : \n",
+    "\n",
+    "    index , date , name , close_price = row\n",
+    "\n",
+    "    print(index , date , name , close_price)\n",
+    "\n",
+    "\n",
+    "# c. iterrows() , itertuples() , df[\"...\"] , iloc/loc() , apply() , df.values 幾種方式讀取列比較 : \n",
+    "\n",
+    "# df[\"...\"] : 最快 , 是向量化作法\n",
+    "\n",
+    "# itertuples() : 第二快 , 因為使用接近原生 tuple 的 namedtuple , 但只做讀取\n",
+    "\n",
+    "# df.values : 第三快 , 因為轉成 numpy array , 純數值處理 ( 這邊比較特別 , 因為是 pandas 轉換的矩陣 , 所以 dtype 是混和型 object 而不會直接轉成字串 U21, 元素還是保有原來型態 )\n",
+    "\n",
+    "# for + iloc() / loc() : 第四快 , 因為是每列讀取 , 而且還要呼叫 iloc() / loc() 函數來讀取資料\n",
+    "\n",
+    "# apply() : 第五快 , 類似向量化 , apply 是一列一列或一欄一欄處理 , 比 for 迴圈快 , 適合需要 if 使用\n",
+    "\n",
+    "# iterrows() : 最慢 , 因為是把每列轉成 series 來處理 , 比較適合少量資料\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. dataframe 的元素長度\n",
+    "\n",
+    "# dataframe 的長度是資料列的多寡 . 和 numpy 這點就一樣\n",
+    "\n",
+    "print(len(dataframe))\n",
+    "\n",
+    "print(len(array))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. dataframe 的切片\n",
+    "\n",
+    "# dataframe 沒有切片 , 不像 numpy array , 可以直接 array[1,:]\n",
+    "\n",
+    "# 要用 dataframe 專屬的 iloc / loc 函數 , 這基本上就是 dataframe 的切片\n",
+    "\n",
+    "print(dataframe.iloc[:,2])\n",
+    "\n",
+    "print(array[:,2])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. pandas 的 series\n",
+    "\n",
+    "# 定義上是 1D 的 pandas 陣列，只有一列資料，像是一個 1D array，2D 是 dataframe\n",
+    "\n",
+    "# 實際上可以發現是看取欄或取列資料，再以欄或列為欄位名稱的序列 , 就是短的那邊為欄 , 長的那邊為列 , 這樣才像一個序列 , 可以看下面例子\n",
+    "\n",
+    "# 欄的序列 : df[\"...\"] , 以欄作為欄位名稱 , 列變成 index \n",
+    "\n",
+    "column_series = dataframe[\"收盤價\"]\n",
+    "\n",
+    "print(column_series)\n",
+    "\n",
+    "# 列的序列 : df.iloc[0] , 以列作為欄位名稱 , 欄變成 index\n",
+    "\n",
+    "row_series = dataframe.iloc[0]\n",
+    "\n",
+    "print(row_series)\n",
+    "\n",
+    "# 技巧 : 如何維持 2D 以利後續加入到原來 dataframe\n",
+    "\n",
+    "# 欄的序列 : df[[\"...\"]] 兩個中括號會是只有一個序列的 2D 的 dataframe \n",
+    "\n",
+    "column_dataframe = dataframe[[\"收盤價\"]]\n",
+    "\n",
+    "print(column_dataframe)\n",
+    "\n",
+    "# # 列的序列 : 也是雙重中括號 iloc[[\"...\"]] , 或者 to_frame() 轉成 2D 再做 T 轉置\n",
+    "\n",
+    "row_dataframe = dataframe.iloc[[0]]\n",
+    "\n",
+    "print(row_dataframe)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "7c95b46a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_11936\\140349258.py:26: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  result = pandas.read_sql(sql,connection)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -679,14 +912,6 @@
       " ['6' '2022' '14' '16' '14' '20' '29' '120']\n",
       " ['7' '2023' '13' '16' '14' '20' '29' '114']\n",
       " ['8' '2024' '13' '16' '14' '18' '28' '105']]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_13736\\3389976615.py:25: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  result = pandas.read_sql(sql,connection)\n"
      ]
     }
    ],
