--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "# isna().all(axis=1) 則是選出全部欄位都是 NaN 的為 True\n",
     "\n",
-    "# notna().all(axis=1) 則是選出全部欄位都要是沒有 NaN 的資列列為 True\n",
+    "# notna().all(axis=1) 則是選出全部欄位都要是沒有 NaN 的資料列為 True\n",
     "\n",
     "NaN_rows = dataframe_2[dataframe_2.isna().any(axis=1)]\n",
     "\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "20042549",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,8 @@
       "1  20250802  aaa    NaN\n",
       "2  20250803  aaa    NaN\n",
       "[1. 3.]\n",
-      "[1. 3. 4. 5. 8. 9.]\n",
+      "[1. 2. 3. 4. 5. 8. 9.]\n",
+      "[[1. 2. 3.]]\n",
       "[['a' '2' '3']\n",
       " ['b' '5' '6']\n",
       " ['c' '8' '9']]\n",
@@ -415,17 +416,23 @@
     "\n",
     "array = numpy.array([1,float(\"NaN\"),3])\n",
     "\n",
-    "array_2 = numpy.array([[1,numpy.nan,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
+    "array_2 = numpy.array([[1,2,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
     "\n",
     "array_3 = array[~numpy.isnan(array)]\n",
     "\n",
-    "# 注意二維做下去就變成只有列出符合條件的元素的一維結果，不是很好用\n",
+    "# 注意二維如果只用 isnan() 做下去就變成只有列出符合條件的元素的一維結果，不是很好用\n",
+    "\n",
+    "# 所以要加上 any(axis=1) 來表示篩選列\n",
     "\n",
     "array_4 = array_2[~numpy.isnan(array_2)]\n",
+    "\n",
+    "array_5 = array_2[~numpy.isnan(array_2).any(axis=1)]\n",
     "\n",
     "print(array_3)\n",
     "\n",
     "print(array_4)\n",
+    "\n",
+    "print(array_5)\n",
     "\n",
     "# b-2. numpy 也沒辦法處理有空字串的情況，如果有空格沒有放元素會錯誤 , 像是 [\"20250801\",\"aaa\", ] 這樣\n",
     "\n",
@@ -435,7 +442,7 @@
     "\n",
     "print(array_5)\n",
     "\n",
-    "# 但是只要是混和型 array , 全部元素都會自動轉型成 u21 或 u32 的混和型文字或數值型別 , 用 dtype 屬性可以檢視\n",
+    "# 但是只要是混和型 array , 全部元素都會自動轉型成 object 混和型 ( 通常不是純數值 , 而是文字 + 數字 ) 或 str 或 u21 / u32 的文字型別 , 用 dtype 屬性可以檢視\n",
     "\n",
     "# 或者是上面 array_2 檢視結果就可以發現都是字串\n",
     "\n",
@@ -475,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "0453e4af",
    "metadata": {},
    "outputs": [
@@ -486,18 +493,34 @@
       "[1]\n",
       "[1]\n",
       "[1]\n",
-      "[1]\n"
+      "[1]\n",
+      "[1. 3.]\n",
+      "[False, False, False]\n",
+      "[False, False, True]\n",
+      "[False, False, True]\n",
+      "[False, True, False]\n",
+      "[True, False, False]\n",
+      "         日期   名稱    收盤價\n",
+      "0  20250801  aaa  120.0\n",
+      "[False, False, False]\n",
+      "[False, False, True]\n",
+      "[True, False, False]\n",
+      "[[1. 2. 3.]\n",
+      " [0. 0. 0.]]\n",
+      "[False, False, False]\n",
+      "[False, False, True]\n",
+      "[False, False]\n",
+      "[False, True, False]\n",
+      "[True, False, False]\n",
+      "[['20250801', 'aaa', 120]]\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 1 dimension(s) and the array at index 1 has 0 dimension(s)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[71], line 102\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m array : \n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39misnan(x) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m : \n\u001b[1;32m--> 102\u001b[0m         array_2 \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mconcatenate((array_2,x))\n\u001b[0;32m    104\u001b[0m \u001b[38;5;28mprint\u001b[39m(array_2)\n\u001b[0;32m    107\u001b[0m \u001b[38;5;66;03m# b-2. 一維的 pandas : \u001b[39;00m\n\u001b[0;32m    108\u001b[0m \n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# pandas 基本上都是二維 , 所以看下面例子\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    117\u001b[0m \n\u001b[0;32m    118\u001b[0m \u001b[38;5;66;03m# dataframe \u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 1 dimension(s) and the array at index 1 has 0 dimension(s)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_18868\\2403303022.py:172: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  dataframe_select = pandas.concat([dataframe_select,dataframe.iloc[[i]]])\n"
      ]
     }
    ],
@@ -585,7 +608,17 @@
     "print(NaN_list_5)\n",
     "\n",
     "\n",
-    "# b. numpy 和 pandas 一個一個元素讀取方式\n",
+    "\n",
+    "# ( 單純實驗性練習 , 單一元素讀取模擬 \" 標記 遺漏值 布林值 \" + \" 移除 遺漏值 列 \" )\n",
+    "\n",
+    "# pandas 基本上要逐個元素運算用 applymap() 即可，而且直接用上面 list comprehension 拿掉 遺漏值 會變成每列矩陣形狀不同錯誤，因此只能標記 ( 如果真的要做，移除每列要用 .any(axis=1) 或自己寫條件 )\n",
+    "\n",
+    "# numpy 則是以數值運算為主，也是一樣 list comprehension 直接做會導致每列陣列大小不同，因此只能標記 ( 逐列做 )，再移除有遺漏值的列\n",
+    "\n",
+    "# 還是以前面作法為主，避免這邊方式，這邊是給二維 list 用，因為不像 pandas 有前面 dropna() 方法可以用，二維 list 也是以標記 遺漏值 為主，移除列要再另外寫 ( 每一列讀取 , 都通過篩選才留下該列 )\n",
+    "\n",
+    "\n",
+    "# b. numpy 和 pandas 一個一個元素讀取方式 \n",
     "\n",
     "# b-1. 一維的 numpy : \n",
     "\n",
@@ -616,7 +649,13 @@
     "\n",
     "# 5-2. 下面做適用二維陣列的寫法 : \n",
     "\n",
-    "# 利用 pandas dataframe 和 numpy array 基本上就是 list , 第一個元素就是一列的 list 方式來加上多次 list comprehension 來做\n",
+    "# pandas dataframe 可以用 dataframe.values 或 iloc 來讀取每列 , 但不能用 list comprehension , 保持資料是 dataframe , 後面再用 dataframe 的 any 函數或 dropna() 或自己寫條件來挑選\n",
+    "\n",
+    "# numpy array 基本上就是 list , 第一個元素就是一列的 list , 可以直接 for 迴圈讀取每一列又維持 array , 用這種方式來逐列做標記\n",
+    "\n",
+    "# list comprehension 如果是對每一資料列做去除 遺漏值 會少欄位數 , 因此只能作為標記用\n",
+    "\n",
+    "# 要注意不論是用 list comprehension 或其他方式來對每個資料列操作 , 如果不是標記而是直接去掉元素，矩陣會每列大小不同，導致產出結果錯誤，因此頂多是標記成 遺漏值 的 布林值，再看要怎麼移除有遺漏值的列\n",
     "\n",
     "\n",
     "# dataframe \n",
@@ -627,9 +666,124 @@
     "\n",
     "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
     "\n",
-    "# for i in dataframe.shape[0] : \n",
+    "dataframe_select = pandas.DataFrame(columns=data_column)\n",
     "\n",
-    "#     dataframe[i] = [x for x in dataframe[i] if ]\n"
+    "for i in dataframe.index : \n",
+    "\n",
+    "    bool_list = []\n",
+    "\n",
+    "    for x in dataframe.iloc[i] : \n",
+    "\n",
+    "        if isinstance(x,str) : \n",
+    "\n",
+    "            a = (x.strip() == \"\")\n",
+    "\n",
+    "        elif isinstance(x,float) : \n",
+    "\n",
+    "            a = math.isnan(x)\n",
+    "\n",
+    "        elif x == None : \n",
+    "\n",
+    "            a = True\n",
+    "\n",
+    "        else : \n",
+    "\n",
+    "            a = False\n",
+    "\n",
+    "        bool_list.append(a)\n",
+    "\n",
+    "    print(bool_list)\n",
+    "\n",
+    "    if not any(bool_list) : \n",
+    "    \n",
+    "        dataframe_select = pandas.concat([dataframe_select,dataframe.iloc[[i]]])\n",
+    "\n",
+    "print(dataframe_select)\n",
+    "\n",
+    "\n",
+    "# numpy \n",
+    "\n",
+    "array_3 = numpy.array([[1,2,3],[4,5,numpy.nan],[numpy.nan,8,9]])\n",
+    "\n",
+    "select_array = numpy.zeros((1,3),dtype=int)\n",
+    "\n",
+    "for row in array_3 : \n",
+    "\n",
+    "    bool_list = []\n",
+    "\n",
+    "    for x in row : \n",
+    "\n",
+    "        if isinstance(x,str) and x.strip() == \"\" : \n",
+    "\n",
+    "            a = True\n",
+    "\n",
+    "        elif isinstance(x,float) and numpy.isnan(x) : \n",
+    "\n",
+    "            a = True\n",
+    "\n",
+    "        elif x == None : \n",
+    "\n",
+    "            a = True\n",
+    "\n",
+    "        else : \n",
+    "\n",
+    "            a = False\n",
+    "\n",
+    "        bool_list.append(a)\n",
+    "\n",
+    "    print(bool_list)\n",
+    "\n",
+    "    if not any(bool_list) : \n",
+    "\n",
+    "        row_2D = numpy.array([row])\n",
+    "\n",
+    "        select_array = numpy.concatenate((row_2D,select_array))\n",
+    "\n",
+    "print(select_array)\n",
+    "\n",
+    "\n",
+    "# list comprehension : \n",
+    "\n",
+    "# 因為 list comprehension 不好做多條件判斷 , 所以拆開變 for 迴圈做標記\n",
+    "\n",
+    "data_list = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "select_list = []\n",
+    "\n",
+    "for row in data_list : \n",
+    "\n",
+    "    bool_list = []\n",
+    "\n",
+    "    for x in row : \n",
+    "\n",
+    "        if isinstance(x,str) : \n",
+    "\n",
+    "            a = (x.strip() == \"\")\n",
+    "\n",
+    "        elif isinstance(x,float) : \n",
+    "\n",
+    "            a = math.isnan(x)\n",
+    "\n",
+    "        elif x == None : \n",
+    "\n",
+    "            a = True\n",
+    "\n",
+    "        else : \n",
+    "\n",
+    "            a = False\n",
+    "\n",
+    "        bool_list.append(a)\n",
+    "\n",
+    "    print(bool_list)\n",
+    "\n",
+    "    # list 的沒有值會變成少一個元素 , 所以要多加一個元素長度判斷條件\n",
+    "\n",
+    "    if not any(bool_list) and len(bool_list) == 3 : \n",
+    "    \n",
+    "        select_list.append(row)\n",
+    "\n",
+    "print(select_list)\n",
+    "\n"
    ]
   }
  ],
