--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -443,6 +443,13 @@
     "\n",
     "# 一維除非是用 pandas.series 才會正確，而不是 dataframe\n",
     "\n",
+    "# dataframe 可以看成是 dictionary 為基礎 ( list + 標籤 ) , 而 numpy array 則是 list 為基礎\n",
+    "\n",
+    "# 因此 dataframe 可以直接用 dictionary 來產生 , 用 list 則是沒有欄位的版本\n",
+    "\n",
+    "# 例如 : pandas.Dataframe({ \"日期\" : [\"20250801\",\"20250802\"] , \"名稱\" : [\"aaa\",\"aaa\"] , \"收盤價\" : [120,130] })\n",
+    "\n",
+    "\n",
     "\n",
     "# 1. 欄位 ( columns ) : 單純用 [] 和 欄位名稱 來做篩選即可\n",
     "\n",
@@ -652,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "30d3edc0",
    "metadata": {},
    "outputs": [
@@ -717,13 +724,7 @@
       "3  150.0\n",
       "4  160.0\n",
       "         日期   名稱    收盤價\n",
-      "0  20250801  aaa  120.0\n",
-      "         日期   名稱    收盤價\n",
-      "0  20250801  aaa  120.0\n",
-      "1  20250802  aaa    NaN\n",
-      "2  20250803  aaa    NaN\n",
-      "3  20250804       150.0\n",
-      "4      None  aaa  160.0\n"
+      "0  20250801  aaa  120.0\n"
      ]
     }
    ],
@@ -1049,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "08b401bf",
    "metadata": {},
    "outputs": [
@@ -1059,6 +1060,39 @@
      "text": [
       "         日期   名稱  開盤價  收盤價\n",
       "0  20250801  aaa  110  120\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250801  aaa  120\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250801  aaa  120\n",
+      "4  20250804  aaa  150\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "2  20250803  aaa  140\n",
+      "3  20250801  aaa  120\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "3  20250801  aaa  120\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  120\n",
+      "0  20250802  aaa  130\n",
+      "(1, 3)\n",
+      "1\n",
+      "3\n",
       "          0    1\n",
       "0  20250801  aaa\n",
       "1  20250802  aaa\n",
@@ -1085,9 +1119,7 @@
       "3  20250804  aaa  150\n",
       "4  20250805  aaa  160\n",
       "0  20250801  aaa  120\n",
-      "(5, 3)\n",
-      "5\n",
-      "3\n"
+      "1  20250802  aaa  130\n"
      ]
     }
    ],
@@ -1118,21 +1150,95 @@
     "\n",
     "\n",
     "\n",
-    "# 2. append()\n",
+    "# 2. 新增資料列 : append() , concat() , df.loc[:] \n",
     "\n",
-    "# dataframe 如果要新增一筆資料，也就是合併一個 series，可以用 append() \n",
+    "# 原本 dataframe 如果要新增一筆資料，也就是合併一個 series，可以用 append()，但在新版本移除了\n",
     "\n",
-    "# 新增多筆資料，也就是合併一個 dataframe，就用 concat()\n",
+    "# 現在新增多筆資料，也就是合併一個 dataframe，就用 concat()\n",
+    "\n",
+    "# 或者用切片方式 , df.loc[:] = ... 來加入到指定位置 , 注意這邊只能用 loc[] , iloc 不支援增加資料列\n",
+    "\n",
+    "# df.add() 是做加法用 , 不是增加資料列 , 例如 df.add(10) 對整行欄位資料全做 + 10 , 其他還有 df.subtract 等數學運算\n",
+    "\n",
+    "# a. concat()\n",
+    "\n",
+    "# 記得要同樣維度 , 如果不同就要先轉換 , 例如 iloc[[...]] , data = [[...]] , to_frame()\n",
+    "\n",
+    "data_row_2 = [[\"20250802\",\"aaa\",130]]\n",
+    "\n",
+    "dataframe_2 = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "dataframe_3 = pandas.DataFrame(data_row_2,columns=data_column)\n",
+    "\n",
+    "combine = pandas.concat([dataframe_2,dataframe_3])\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# b. df.loc[:]\n",
+    "\n",
+    "# 可以直接把一維的 list 或 series 加在最後\n",
+    "\n",
+    "# 注意 : 要用 loc 而不是 iloc \n",
+    "\n",
+    "data_row_3 = [\"20250803\",\"aaa\",140]\n",
+    "\n",
+    "combine.loc[len(combine)] = data_row_3\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "data_series = combine.iloc[0]\n",
+    "\n",
+    "combine.loc[len(combine)] = data_series\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# 也可以用 dictionary 方式放進去 , 有寫欄位會自動找相對應欄位 , 不用排序\n",
+    "\n",
+    "data_row_4 = { \"名稱\" : \"aaa\" , \"日期\" : \"20250804\" , \"收盤價\" : 150 }\n",
+    "\n",
+    "combine.loc[len(combine)] = data_row_4\n",
+    "\n",
+    "print(combine)\n",
     "\n",
     "\n",
     "\n",
-    "# 3. copy() \n",
+    "# 3. 移除資料列 : drop() , df[df[...]] 布林陣列 , drop() + df.index[df[...]]\n",
+    "\n",
+    "# drop() 需要指定 index , 可以直接指定單一或 list of index , 或用 df.index[df[...]] 布林陣列來指定特定列的 index \n",
+    "\n",
+    "# 基本上還是推薦直接使用布林陣列的篩選方式來移除資料列\n",
+    "\n",
+    "# df.index[] 是像 df.iloc[] 一樣都是切片的函數 , 只是是回傳 index 而不是資料列\n",
+    "\n",
+    "# 像一般切片方式用 df.iloc[:-1] 也是可以 , 表示只取到倒數第二個 ( 不算 -1 ) \n",
+    "\n",
+    "# a. drop() + len(df)\n",
+    "\n",
+    "combine = combine.drop(len(combine)-1)\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# b. drop() + df.index[df[...]]\n",
+    "\n",
+    "combine = combine.drop(combine.index[combine[\"收盤價\"]==140])\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# c. df.iloc[:-1]\n",
+    "\n",
+    "combine = combine.iloc[:-1]\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. copy() \n",
     "\n",
     "# 就跟 numpy array 一樣，pandas 要複製 dataframe 可以用 copy()\n",
     "\n",
     "\n",
     "\n",
-    "# 4. shape\n",
+    "# 5. shape\n",
     "\n",
     "# pandas 也有 shape 可以用，和 numpy 一樣，可以方便取得列和欄的數量\n",
     "\n",
@@ -1148,7 +1254,7 @@
     "\n",
     "\n",
     "\n",
-    "# 5. loc() 和 iloc()\n",
+    "# 6. loc() 和 iloc()\n",
     "\n",
     "# loc 和 iloc 差別就像之前所說，loc 是針對文字標籤進行篩選的函數，iloc 是利用 index 數字標籤去篩選\n",
     "\n",
@@ -1159,21 +1265,21 @@
     "\n",
     "# a. 刻意不給欄位文字標籤，這樣就可以用數字索引篩選\n",
     "\n",
-    "data_row_2 = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "data_row_5 = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
     "\n",
-    "dataframe_2 = pandas.DataFrame(data_row_2)\n",
+    "dataframe_4 = pandas.DataFrame(data_row_5)\n",
     "\n",
-    "select = dataframe_2.loc[0:2,0:1]\n",
+    "select = dataframe_4.loc[0:2,0:1]\n",
     "\n",
     "print(select)\n",
     "\n",
     "# 改成欄位有文字標籤，就不能對欄位用數字索引，只能對數字索引的資料列做篩選\n",
     "\n",
-    "dataframe_3 = pandas.DataFrame(data_row_2,columns=data_column)\n",
+    "dataframe_5 = pandas.DataFrame(data_row_5,columns=data_column)\n",
     "\n",
     "# select = dataframe_2.loc[0:2,0:1]\n",
     "\n",
-    "select_2 = dataframe_2.loc[0:2]\n",
+    "select_2 = dataframe_4.loc[0:2]\n",
     "\n",
     "print(select_2)\n",
     "\n",
@@ -1182,24 +1288,21 @@
     "\n",
     "# 因此盡量還是 loc 用文字，iloc 用數字，這樣比較不會有問題\n",
     "\n",
-    "combine = pandas.concat([dataframe_3,dataframe_3])\n",
+    "combine_2 = pandas.concat([dataframe_5,dataframe_5])\n",
     "\n",
-    "print(combine)\n",
+    "print(combine_2)\n",
     "\n",
     "# 用 loc 會錯誤，顯示有重複索引\n",
     "\n",
-    "# select_3 = combine.loc[0:2]\n",
+    "# select_3 = combine_2.loc[0:2]\n",
     "\n",
     "# print(select_3)\n",
     "\n",
     "# iloc 就會正確，不會管數字標籤有重複\n",
     "\n",
-    "select_4 = combine.iloc[0:6]\n",
+    "select_4 = combine_2.iloc[0:7]\n",
     "\n",
     "print(select_4)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
