新增 pandas 模組內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7c95b46a",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,49 @@
     "\n",
     "result_2 = result.to_numpy()\n",
     "\n",
-    "print(result_2)\n"
+    "print(result_2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "913a5cec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         日期   名稱  收盤價  狀態\n",
+      "0  20250801  aaa  120  買進\n",
+      "1  20250802  aaa  130  買進\n",
+      "2  20250803  aaa  140  賣出\n",
+      "3  20250804  aaa  150  賣出\n",
+      "4  20250805  aaa  160  賣出\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas 其他技巧 2\n",
+    "\n",
+    "\n",
+    "# 3. 可以結合 loc() + 布林陣列 + 新產生欄位 挑選到預先產生欄位的特定位置 來新增判斷結果的欄位\n",
+    "\n",
+    "# 這樣就不用寫 if df.loc[...] + df[\"新欄位\"] = ... 這樣兩段 , 比較簡單\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "dataframe.loc[dataframe[\"收盤價\"]<140,[\"狀態\"]] = \"買進\"\n",
+    "\n",
+    "dataframe.loc[dataframe[\"收盤價\"]>=140,[\"狀態\"]] = \"賣出\"\n",
+    "\n",
+    "print(dataframe)\n",
+    "\n"
    ]
   },
   {
