新增基本變數型別練習內容

--- a/基礎 python 語法練習/基本變數型別練習/code.ipynb
+++ b/基礎 python 語法練習/基本變數型別練習/code.ipynb
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a28fc876",
    "metadata": {},
    "outputs": [],
@@ -1249,6 +1249,53 @@
     "NaN_list = [1,\"\",\" \",float(\"NaN\"),None]\n",
     "\n",
     "NaN_list = [x for x in NaN_list if not (isinstance(x,str) and x.strip() == \"\")]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9416c5aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[]\n",
+      "[2, 3, 4]\n",
+      "[5, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 移除最後一個元素的方式\n",
+    "\n",
+    "# list 的切片用 [:-1] 就可以直接移除最後一個元素 , 因為只挑到 -1\n",
+    "\n",
+    "# 不論是 pandas dataframe 或 numpy array , 因為都是 有標題 list ( dictionary ) 或 list 為基礎 , 都可以用切片 [:-1] 來移除最後一個元素\n",
+    "\n",
+    "a = [1,2,3,4,5]\n",
+    "\n",
+    "print(a[:-1])\n",
+    "\n",
+    "\n",
+    "# 切片觀念\n",
+    "\n",
+    "# 一定要是數起來往前 ( 最後元素在第一個元素之前 ) , 不然就要用 [::-1] \n",
+    "\n",
+    "# 下面這樣就取不到東西 , 因為數起來最後元素在第一個元素之前 \n",
+    "\n",
+    "print(a[-1:1])\n",
+    "\n",
+    "# 改成下面就可以\n",
+    "\n",
+    "print(a[1:-1])\n",
+    "\n",
+    "# 或者用 [::-1]\n",
+    "\n",
+    "print(a[-1:1:-1]) \n",
     "\n"
    ]
   }
