--- a/資料處理/資料統計特徵/code.ipynb
+++ b/資料處理/資料統計特徵/code.ipynb
@@ -11,147 +11,13 @@
     "\n",
     "\n",
     "\n",
-    "# 在進行資料運用之前先確認資料\n",
+    "# 在移除完 NaN 等遺漏值之後，進行以下部分 : \n",
     "\n",
-    "# a. 基本資料資訊 , 例如 : 陣列大小 , 列數量 , 欄位數量 , 型別\n",
+    "# 1. 各欄位的統計敘述 , 資料分布 , 圖形化呈現\n",
     "\n",
-    "# b. 各欄位的統計敘述 , 資料分布 , 圖形化呈現\n",
-    "\n",
-    "# c. 各欄位的相關性 , 圖形化呈現\n",
+    "# 2. 各欄位的相關性 , 圖形化呈現\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff89f60d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. 基本資料資訊 , 例如 : 陣列大小 , 列數量 , 欄位數量 , 型別"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "3ef93d17",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3)\n",
-      "2\n",
-      "3\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy\n",
-    "\n",
-    "\n",
-    "# a. numpy 的基本陣列資訊\n",
-    "\n",
-    "\n",
-    "# a-1. shape()\n",
-    "\n",
-    "array = numpy.array([[1,2,3],[4,5,6]])\n",
-    "\n",
-    "# shape 會回傳欄和列的 tuple \n",
-    "\n",
-    "print(numpy.shape(array))\n",
-    "\n",
-    "# 可以再用索引取得欄和列的數量\n",
-    "\n",
-    "total = numpy.shape(array)\n",
-    "\n",
-    "print(total[0])\n",
-    "\n",
-    "print(total[1])\n",
-    "\n",
-    "\n",
-    "# a-2. size\n",
-    "\n",
-    "# 用 size 就不用 row * column 來得到元素的總數\n",
-    "\n",
-    "print(array.size)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91089c00",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5, 3)\n",
-      "5\n",
-      "3\n",
-      "15\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5 entries, 0 to 4\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   日期      5 non-null      object\n",
-      " 1   名稱      5 non-null      object\n",
-      " 2   收盤價     5 non-null      int64 \n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 252.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas\n",
-    "\n",
-    "\n",
-    "# b. pandas 的基本矩陣資訊\n",
-    "\n",
-    "\n",
-    "# b-1. shape\n",
-    "\n",
-    "# 和 numpy 一樣，只是方法變成屬性\n",
-    "\n",
-    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
-    "\n",
-    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",130],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
-    "\n",
-    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
-    "\n",
-    "array = dataframe.shape\n",
-    "\n",
-    "print(array)\n",
-    "\n",
-    "row = array[0]\n",
-    "\n",
-    "column = array[1]\n",
-    "\n",
-    "print(row)\n",
-    "\n",
-    "print(column)\n",
-    "\n",
-    "\n",
-    "# b-2. size\n",
-    "\n",
-    "# 這裡就和 numpy 一模一樣\n",
-    "\n",
-    "total = dataframe.size\n",
-    "\n",
-    "print(total)\n",
-    "\n",
-    "\n",
-    "# b-3. info()\n",
-    "\n",
-    "# 可以看各欄位的資料型別 , 是否有遺漏值 , 很方便的功能\n",
-    "\n",
-    "dataframe.info()\n"
    ]
   },
   {
@@ -161,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. 各欄位的統計敘述 , 資料分布 , 圖形化呈現"
+    "# 1. 各欄位的統計敘述 , 資料分布 , 圖形化呈現"
    ]
   },
   {
@@ -553,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. 各欄位的相關性 , 圖形化呈現"
+    "# 2. 各欄位的相關性 , 圖形化呈現"
    ]
   },
   {
